# alexa-avs-framework

./: .gitignore  CMakeLists.txt  README.md
src/alexa-amazon-client/: .gitignore  CMakeLists.txt  README.md  alexa-amazon-client.pro  application.cpp  application.hpp  config.json  main.cpp
src/alexa-amazon-client/asset/: SpeechFinishedEvent.json
src/alexa-sdk-framework/: .gitignore  CMakeLists.txt  Makefile  alexa-sdk-framework.pro  libalexa-sdk-framework.so.1.0.0
src/alexa-sdk-framework/amazon-client/: alexaamazonclient.cpp  controller.cpp  pipeline.cpp
src/alexa-sdk-framework/asset/: SpeechStartedEvent.json
src/alexa-sdk-framework/audio/: gplayback.cpp  playback.cpp
src/alexa-sdk-framework/auth/: authenticator.cpp  authinfo.cpp  httpinterface.cpp  httppipeline.cpp  httpresponse.cpp
src/alexa-sdk-framework/directive/: directive.cpp  directivecommand.cpp  directivecommandinvoker.cpp  directivecommandproxy.cpp  directiveiterator.cpp  directivemaker.cpp  directivemanager.cpp  directivemodulinterface.cpp  directiveobserver.cpp
src/alexa-sdk-framework/directive/builtin/: alertmodul.cpp  audioplayermodul.cpp  notificationmodul.cpp  speakermodul.cpp  speechrecognizemodul.cpp  speechsynthesizermodul.cpp  systemmodul.cpp
src/alexa-sdk-framework/event/: eventmodulmanager.cpp  eventstreamrequest.cpp  fileloader.cpp  http2headerbuilder.cpp  http2headerget.cpp  http2headerpost.cpp  jsonbodybuilder.cpp  jsonfileloader.cpp  jsonheaderbuilder.cpp  jsonobject.cpp  recognizestreamrequest.cpp  recorder.cpp  requestmanager.cpp  transportdatainferface.cpp  transportheaderinfo.cpp  transportinfo.cpp  transportmaker.cpp
src/alexa-sdk-framework/event/builtin/: eventalertmodul.cpp  eventaudioplayermodul.cpp  eventcontextmodul.cpp  eventplaybackcontrollermodul.cpp  eventsettingsmodul.cpp  eventspeakermodul.cpp  eventspeechrecognizemodul.cpp  eventspeechsynthesizermodul.cpp  eventsystemmodul.cpp
src/alexa-sdk-framework/http2/: http2connection.cpp  http2data.cpp  http2headerinfo.cpp  http2pipeline.cpp  http2pipelineinterface.cpp  http2response.cpp  http2responseanalyse.cpp  http2transportdata.cpp  http2transportqueue.cpp  pipelineconnectinfo.cpp
src/alexa-sdk-framework/include/: avs.hpp  directivelayer.hpp  requestlayer.hpp  stdafx.hpp  transportlayer.hpp
src/alexa-sdk-framework/include/amazon-client/: alexaamazonclient.hpp  controller.hpp  pipeline.hpp
src/alexa-sdk-framework/include/audio/: gplayback.hpp  playback.hpp
src/alexa-sdk-framework/include/auth/: authenticator.hpp  authinfo.hpp  httpinterface.hpp  httppipeline.hpp  httpresponse.hpp
src/alexa-sdk-framework/include/directive/: directive.hpp  directivecommand.hpp  directivecommandinvoker.hpp  directivecommandproxy.hpp  directiveiterator.hpp  directivelistenerinterface.hpp  directivemaker.hpp  directivemanager.hpp  directivemodulinterface.hpp  directiveobserver.hpp
src/alexa-sdk-framework/include/directive/builtin/: alertmodul.hpp  audioplayermodul.hpp  notificationmodul.hpp  speakermodul.hpp  speechrecognizemodul.hpp  speechsynthesizermodul.hpp  systemmodul.hpp
src/alexa-sdk-framework/include/event/: eventmodulmanger.hpp  eventstreamrequest.hpp  fileloader.hpp  http2headerbuilder.hpp  http2headerget.hpp  http2headerpost.hpp  jsonbodybuilder.hpp  jsonfileloader.hpp  jsonheaderbuilder.hpp  jsonobject.hpp  recognizestreamrequest.hpp  recorder.hpp  requestmanager.hpp  transport_builder_interface.hpp  transportdatainterface.hpp  transportheaderinfo.hpp  transportinfo.hpp  transportmaker.hpp
src/alexa-sdk-framework/include/event/builtin/: eventalertmodul.hpp  eventaudioplayermodul.hpp  eventcontextmodul.hpp  eventplaybackcontrollermodul.hpp  eventsettingsmodul.hpp  eventspeakermodul.hpp  (+3 more)
src/alexa-sdk-framework/include/http2/: http2connection.hpp  http2data.hpp  http2headerinfo.hpp  http2pipeline.hpp  http2pipelineinterface.hpp  http2response.hpp  http2responseanalyse.hpp  http2responseeventinterface.hpp  http2transportdata.hpp  http2transportqueue.hpp  pipelineconnectinfo.hpp
src/alexa-sdk-framework/include/server/: alexaserver.hpp  client.hpp  directiveproxy.hpp  serverinterface.hpp  transferstate.hpp  transportdatalistener.hpp  transportdatamanager.hpp  transportdataobserver.hpp
src/alexa-sdk-framework/include/utils/: console.hpp  logger.hpp
src/alexa-sdk-framework/server/: alexaserver.cpp  client.cpp  directiveproxy.cpp  serverinterface.cpp  transferstate.cpp  transportdatalistener.cpp  transportdatamanager.cpp  transportdataobserver.cpp
src/alexa-sdk-framework/utils/: console.cpp  logger.cpp
(+703 files in other folders)
